graph initial