@@ -1,9 +1,44 @@
-# demonstrate use of spark-sql
-mini project to show how hive sql can easily be executed on spark
+# getting started with graph-frames
+Mini project to get me started with graph-frames.
+I want to compute several metrics for each node.
 
-use `sbt console`to interactively run queries
+For each node compute percentage of fraudulent connections for 
+  - direct node (directed)
+  - direct node (undirected)
+  - the friendship network form the node (directed)
+  - the friendship network form the node (undirected)
+in total and per connection type.
 
-or `./sync.sh` to run assembly
+Getting started with graph-frames I am not sure how to move forward. Looking forward to some suggestions.
 
-or `sbt run` but make sure to set `$SBT_OPTS -Xmx8G -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -Xss2M`
-as spark will be launched inside sbt 
+The following nodes are present:
+
+```
++---+-------+-----+
+| id|   name|fraud|
++---+-------+-----+
+|  a|  Alice|    1|
+|  b|    Bob|    0|
+|  c|Charlie|    0|
+|  d|  David|    0|
+|  e| Esther|    0|
+|  f|  Fanny|    0|
+|  g|  Gabby|    0|
++---+-------+-----+
+```
+
+and edges
+```
++---+---+------------+
+|src|dst|relationship|
++---+---+------------+
+|  a|  b|           A|
+|  b|  c|           B|
+|  c|  b|           B|
+|  f|  c|           B|
+|  e|  f|           B|
+|  e|  d|           A|
+|  d|  a|           A|
+|  a|  e|           A|
++---+---+------------+
+```
